# algorithms-data-structures

./: .gitignore  CMakeLists.txt  README.md
assets/backtracking/maze/: maze-0.txt  maze-1.txt  maze-2.txt  maze-3.txt  maze-4.txt  maze-5.txt  maze-6.txt  maze-7.txt  maze-8.txt  maze-9.txt
src/backtracking/: knights-tour.c  knights-tour.h  maze.c  maze.h  n-queen.c  n-queen.h
src/commons/: csv.c  csv.h
src/divide-and-conquer/: binary_search.c  binary_search.h  boolean-counter.c  boolean-counter.h  knapsack.h  majority.c  majority.h  quicksort.c  subsum.c  subsum.h  sum.c
src/grokking/: dc_sum.c  dc_sum.h  hash_table.c  hash_table.h  knn.c  knn.h  linked_list.h  merge_sort.h  quicksort.c  quicksort.h  selection_sort.h
src/grokking/three/: heap.c
src/simple-structures/: hash_table.c  hash_table.h  linked_list.c  merge_sort.c  recursion.c  recursion.h  selection_sort.c
src/threes/: trie.c
